gts-macros/tests/compile_fail/instance_missing_schema_id.stderr
error: unexpected end of input, gts_well_known_instance: Missing required attribute: id
 --> tests/compile_fail/instance_missing_schema_id.rs:5:1
  |
5 | / #[gts_well_known_instance(
6 | |     dir_path = "instances"
7 | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `gts_well_known_instance` (in Nightly builds, run with -Z macro-backtrace for more info)
